Attempt to fix nightly site build