@@ -159,6 +159,21 @@
     					<version>2.2</version>
 					</plugin>
 				<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.3.1</version>
+						<configuration>
+							<useFile>false</useFile>
+							<testFailureIgnore>false</testFailureIgnore>
+							<includes>
+								<include>**/*Test.java</include>
+							</includes>
+ 							<excludes><exclude></exclude></excludes>
+							<forkMode>once</forkMode>
+							<reportFormat>plain</reportFormat>
+							<argLine>-Xmx1536m -XX:MaxPermSize=512m</argLine>
+						</configuration>
+				</plugin>
+				<plugin>
 					<artifactId>maven-war-plugin</artifactId>
 					<version>2.0</version>
 				</plugin>
